[package]
name = "fluxora_vesting"
version = "0.1.0"
edition = "2021"
description = "Fluxora token vesting contract for Stellar Soroban — cliff + linear release for treasury allocations"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[[test]]
name = "integration_suite"
path = "tests/integration_suite.rs"
required-features = ["testutils"]
